--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo distinctio itaque illum libero fugiat
+        architecto temporibus ratione nobis inventore sequi, quos, commodi accusantium praesentium, sunt ab sint nostrum
+        vitae quidem.</p>
 </body>
 
 </html>
